---
source: server/src/webhook/parse.rs
expression: event
snapshot_kind: text
---
WebhookEvent {
    sender: Some(
        User {
            login: "TroyKomodo",
            id: UserId(
                49777269,
            ),
        },
    ),
    repository: Some(
        Repository {
            id: RepositoryId(
                594510762,
            ),
            name: "scuffle",
            owner: User {
                login: "ScuffleCloud",
                id: UserId(
                    122814584,
                ),
            },
        },
    ),
    installtion_id: Some(
        InstallationId(
            58286822,
        ),
    ),
    installation: None,
    kind: CheckRun,
    specific: CheckRun(
        CheckRunWebhookEventPayload {
            action: Created,
            check_run: Object {
                "app": Object {
                    "client_id": String("Iv1.05c79e9ad1f6bdfa"),
                    "created_at": String("2018-07-30T09:30:17Z"),
                    "description": String("Automate your workflow from idea to production"),
                    "events": Array [
                        String("branch_protection_rule"),
                        String("check_run"),
                        String("check_suite"),
                        String("create"),
                        String("delete"),
                        String("deployment"),
                        String("deployment_status"),
                        String("discussion"),
                        String("discussion_comment"),
                        String("fork"),
                        String("gollum"),
                        String("issues"),
                        String("issue_comment"),
                        String("label"),
                        String("merge_group"),
                        String("milestone"),
                        String("page_build"),
                        String("project"),
                        String("project_card"),
                        String("project_column"),
                        String("public"),
                        String("pull_request"),
                        String("pull_request_review"),
                        String("pull_request_review_comment"),
                        String("push"),
                        String("registry_package"),
                        String("release"),
                        String("repository"),
                        String("repository_dispatch"),
                        String("status"),
                        String("watch"),
                        String("workflow_dispatch"),
                        String("workflow_run"),
                    ],
                    "external_url": String("https://help.github.com/en/actions"),
                    "html_url": String("https://github.com/apps/github-actions"),
                    "id": Number(15368),
                    "name": String("GitHub Actions"),
                    "node_id": String("MDM6QXBwMTUzNjg="),
                    "owner": Object {
                        "avatar_url": String("https://avatars.githubusercontent.com/u/9919?v=4"),
                        "events_url": String("https://api.github.com/users/github/events{/privacy}"),
                        "followers_url": String("https://api.github.com/users/github/followers"),
                        "following_url": String("https://api.github.com/users/github/following{/other_user}"),
                        "gists_url": String("https://api.github.com/users/github/gists{/gist_id}"),
                        "gravatar_id": String(""),
                        "html_url": String("https://github.com/github"),
                        "id": Number(9919),
                        "login": String("github"),
                        "node_id": String("MDEyOk9yZ2FuaXphdGlvbjk5MTk="),
                        "organizations_url": String("https://api.github.com/users/github/orgs"),
                        "received_events_url": String("https://api.github.com/users/github/received_events"),
                        "repos_url": String("https://api.github.com/users/github/repos"),
                        "site_admin": Bool(false),
                        "starred_url": String("https://api.github.com/users/github/starred{/owner}{/repo}"),
                        "subscriptions_url": String("https://api.github.com/users/github/subscriptions"),
                        "type": String("Organization"),
                        "url": String("https://api.github.com/users/github"),
                        "user_view_type": String("public"),
                    },
                    "permissions": Object {
                        "actions": String("write"),
                        "administration": String("read"),
                        "attestations": String("write"),
                        "checks": String("write"),
                        "contents": String("write"),
                        "deployments": String("write"),
                        "discussions": String("write"),
                        "issues": String("write"),
                        "merge_queues": String("write"),
                        "metadata": String("read"),
                        "packages": String("write"),
                        "pages": String("write"),
                        "pull_requests": String("write"),
                        "repository_hooks": String("write"),
                        "repository_projects": String("write"),
                        "security_events": String("write"),
                        "statuses": String("write"),
                        "vulnerability_alerts": String("read"),
                    },
                    "slug": String("github-actions"),
                    "updated_at": String("2024-04-10T20:33:16Z"),
                },
                "check_suite": Object {
                    "after": String("c0580a621d824cc8097f88a76f47f6b313fcee99"),
                    "app": Object {
                        "client_id": String("Iv1.05c79e9ad1f6bdfa"),
                        "created_at": String("2018-07-30T09:30:17Z"),
                        "description": String("Automate your workflow from idea to production"),
                        "events": Array [
                            String("branch_protection_rule"),
                            String("check_run"),
                            String("check_suite"),
                            String("create"),
                            String("delete"),
                            String("deployment"),
                            String("deployment_status"),
                            String("discussion"),
                            String("discussion_comment"),
                            String("fork"),
                            String("gollum"),
                            String("issues"),
                            String("issue_comment"),
                            String("label"),
                            String("merge_group"),
                            String("milestone"),
                            String("page_build"),
                            String("project"),
                            String("project_card"),
                            String("project_column"),
                            String("public"),
                            String("pull_request"),
                            String("pull_request_review"),
                            String("pull_request_review_comment"),
                            String("push"),
                            String("registry_package"),
                            String("release"),
                            String("repository"),
                            String("repository_dispatch"),
                            String("status"),
                            String("watch"),
                            String("workflow_dispatch"),
                            String("workflow_run"),
                        ],
                        "external_url": String("https://help.github.com/en/actions"),
                        "html_url": String("https://github.com/apps/github-actions"),
                        "id": Number(15368),
                        "name": String("GitHub Actions"),
                        "node_id": String("MDM6QXBwMTUzNjg="),
                        "owner": Object {
                            "avatar_url": String("https://avatars.githubusercontent.com/u/9919?v=4"),
                            "events_url": String("https://api.github.com/users/github/events{/privacy}"),
                            "followers_url": String("https://api.github.com/users/github/followers"),
                            "following_url": String("https://api.github.com/users/github/following{/other_user}"),
                            "gists_url": String("https://api.github.com/users/github/gists{/gist_id}"),
                            "gravatar_id": String(""),
                            "html_url": String("https://github.com/github"),
                            "id": Number(9919),
                            "login": String("github"),
                            "node_id": String("MDEyOk9yZ2FuaXphdGlvbjk5MTk="),
                            "organizations_url": String("https://api.github.com/users/github/orgs"),
                            "received_events_url": String("https://api.github.com/users/github/received_events"),
                            "repos_url": String("https://api.github.com/users/github/repos"),
                            "site_admin": Bool(false),
                            "starred_url": String("https://api.github.com/users/github/starred{/owner}{/repo}"),
                            "subscriptions_url": String("https://api.github.com/users/github/subscriptions"),
                            "type": String("Organization"),
                            "url": String("https://api.github.com/users/github"),
                            "user_view_type": String("public"),
                        },
                        "permissions": Object {
                            "actions": String("write"),
                            "administration": String("read"),
                            "attestations": String("write"),
                            "checks": String("write"),
                            "contents": String("write"),
                            "deployments": String("write"),
                            "discussions": String("write"),
                            "issues": String("write"),
                            "merge_queues": String("write"),
                            "metadata": String("read"),
                            "packages": String("write"),
                            "pages": String("write"),
                            "pull_requests": String("write"),
                            "repository_hooks": String("write"),
                            "repository_projects": String("write"),
                            "security_events": String("write"),
                            "statuses": String("write"),
                            "vulnerability_alerts": String("read"),
                        },
                        "slug": String("github-actions"),
                        "updated_at": String("2024-04-10T20:33:16Z"),
                    },
                    "before": String("96a6ddb2cc8cac22c4daa82cb28120f47a04fee7"),
                    "conclusion": Null,
                    "created_at": String("2024-12-22T01:24:39Z"),
                    "head_branch": String("main"),
                    "head_sha": String("c0580a621d824cc8097f88a76f47f6b313fcee99"),
                    "id": Number(32346401207),
                    "node_id": String("CS_kwDOI2-Dqs8AAAAHh_7ptw"),
                    "pull_requests": Array [],
                    "status": String("queued"),
                    "updated_at": String("2024-12-22T01:24:39Z"),
                    "url": String("https://api.github.com/repos/ScuffleCloud/scuffle/check-suites/32346401207"),
                },
                "completed_at": Null,
                "conclusion": Null,
                "details_url": String("https://github.com/ScuffleCloud/scuffle/actions/runs/12450045856/job/34756421189"),
                "external_id": String("67049caa-ba6d-54b5-8d6c-ea858021b916"),
                "head_sha": String("c0580a621d824cc8097f88a76f47f6b313fcee99"),
                "html_url": String("https://github.com/ScuffleCloud/scuffle/actions/runs/12450045856/job/34756421189"),
                "id": Number(34756421189),
                "name": String("audit"),
                "node_id": String("CR_kwDOI2-Dqs8AAAAIF6TmRQ"),
                "output": Object {
                    "annotations_count": Number(0),
                    "annotations_url": String("https://api.github.com/repos/ScuffleCloud/scuffle/check-runs/34756421189/annotations"),
                    "summary": Null,
                    "text": Null,
                    "title": Null,
                },
                "pull_requests": Array [],
                "started_at": String("2024-12-22T01:24:41Z"),
                "status": String("queued"),
                "url": String("https://api.github.com/repos/ScuffleCloud/scuffle/check-runs/34756421189"),
            },
        },
    ),
}
